--- a/style.css
+++ b/style.css
@@ -2,24 +2,6 @@
 *** GENERAL
 **********************************************/
 
-.final-score {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 520px;
-    color: #555;
-    font-size: 18px;
-    font-family: 'Lato';
-    text-align: center;
-    padding: 10px;
-    width: 160px;
-    text-transform: uppercase;
-}
-
-.final-score:focus {
-    outline: none;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -185,6 +167,24 @@ i {
     top: 250px;
 }
 
+.final-score {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
+}
+
+.final-score:focus {
+    outline: none;
+}
+
 .dice {
     position: absolute;
     left: 50%;
@@ -193,7 +193,6 @@ i {
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
-
 
 .winner {
     background-color: #f7f7f7;
@@ -207,11 +206,11 @@ i {
 .copyright {
     display: flex;
     width: 100%;
-    border: 1px solid wheat;
     position: absolute;
     bottom: 0;
     padding: .5rem;
-    text-align: center;
+    /* text-align: center; */
+    justify-content: center;
 }
 
 .copyright-text {
